tests/baselines/reference/typecheckIfCondition.errors.txt
tests/cases/compiler/typecheckIfCondition.ts(4,10): error TS2304: Cannot find name 'module'.
tests/cases/compiler/typecheckIfCondition.ts(4,26): error TS2304: Cannot find name 'module'.


==== tests/cases/compiler/typecheckIfCondition.ts (2 errors) ====
    // both uses of module should be an undefined symbol
    function myWrapper()
    {
        if (!module.exports) module.exports = "";
             ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                             ~~~~~~
!!! error TS2304: Cannot find name 'module'.
        var x = null; // don't want to baseline output
    }
    